# faux

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  faux.html  index.html  motivation.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: pages.yml  test.yml
blog/: an-inside-look.html  book.toml  first-beta.html  how-it-works.html  introducing-faux.html  landing-v-0-1.html  release.html
blog/src/: SUMMARY.md  motivation.md
blog/src/blog/: first-beta.md  how-it-works.md  release.md
book/src/: SUMMARY.md  faux.md  motivation.md
book/src/blog/: an-inside-look.md  how-it-works.md  landing-v-0-1.md
book/src/guide/: exporting-mocks.md  getting-started.md  intro.md
examples/: Cargo.toml
examples/testable-renderer/: Cargo.toml
examples/testable-renderer/src/: lib.rs
examples/world-renderer/: Cargo.toml
examples/world-renderer/src/: main.rs
faux_macros/: Cargo.toml
faux_macros/src/: create.rs  lib.rs  methods.rs  self_type.rs
faux_macros/src/methods/: morphed.rs  receiver.rs  when_arg.rs  when_output.rs
faux_macros/tests/: test.rs
faux_macros_impl/: Cargo.toml  LICENSE
faux_macros_impl/src/: create.rs  lib.rs  methods.rs  self_type.rs
faux_macros_impl/src/methods/: morphed.rs
guide/: exporting-mocks.html  getting-started.html
src/: SUMMARY.md  expect.rs  faux_caller.rs  impl_when.rs  into_maybe_faux.rs  lib.rs  matcher.rs  mock.rs  mock_store.rs  mock_wrapper.rs  quack.rs  readme_tests.rs  stub.rs  when.rs
src/blog/: release.md
src/matcher/: all_args.rs  any.rs  eq.rs  from_fn.rs  invocation_matcher.rs
src/mock/: store.rs  stub.rs  unchecked.rs
src/mock_store/: mock.rs  stub.rs  unsafe_mock.rs
src/when/: once.rs  with_args.rs  with_args_once.rs
tests/: arbitrary_self.rs  asynchronous.rs  clone.rs  expanded.rs  expect.rs  generic_method_return.rs  generic_methods.rs  generic_struct.rs  multi_mock.rs  paths.rs  pin.rs  return_self_method.rs  return_self_tuple.rs  simple.rs  test.rs  threads.rs  trait_faux.rs  trait_impl.rs  trait_mocks.rs  when_arguments.rs  with_args.rs
