[package]
name = "faux"
version = "0.0.8"
authors = ["Andres <andresnrx@gmail.com>"]
license = "MIT"
description = "A library to mock structs"
homepage = "https://github.com/nrxus/faux"
repository = "https://github.com/nrxus/faux"
edition = "2018"
keywords = ["mock", "mocking", "test", "testing", "faux"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
faux_macros = { path = "faux_macros", version = "0.0.8" }
paste = "1.0.4"

[dev-dependencies]
futures = "0.3.9"

[workspace]
members = ["faux_macros"]
