[package]
name = "faux"
version = "0.1.5"
authors = ["Andres <andresnrx@gmail.com>"]
license = "MIT"
description = "A library to mock structs"
homepage = "https://github.com/nrxus/faux"
repository = "https://github.com/nrxus/faux"
edition = "2021"
keywords = ["mock", "mocking", "test", "testing", "faux"]
readme = "README.md"

[dependencies]
faux_macros = { path = "faux_macros", version = "0.1.5" }
paste = "1.0.4"

[dev-dependencies]
futures = "0.3.9"

[workspace]
members = ["faux_macros"]
