[package]
name = "faux_macros"
version = "0.1.5"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Implementations for #[create], #[methods], when!"
homepage = "https://github.com/nrxus/faux"
repository = "https://github.com/nrxus/faux"
keywords = ["mock", "mocking", "test", "testing", "faux"]

[dependencies]
syn = { version = "1.0.58", features = ["full", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
darling = "0.12.0"

[dev-dependencies]
faux = { path = "../" }

[lib]
proc-macro = true
