[package]
name = "faux_macros"
version = "0.1.10"
authors = ["Andres <andresnrx@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Implementations for #[create], #[methods], when!"
homepage = "https://github.com/nrxus/faux"
repository = "https://github.com/nrxus/faux"
keywords = ["mock", "mocking", "test", "testing", "faux"]
rust-version = "1.58"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
darling = "0.20"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
faux = { path = "../" }

[lib]
proc-macro = true
